src/ObjLoading/Menu/MenuParser.cpp

// Generated from E:/Projects/VS/OpenAssetTools/src/ObjLoading/Menu/Menu.g4 by ANTLR 4.13.2


#include "MenuListener.h"

#include "MenuParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MenuParserStaticData final {
  MenuParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MenuParserStaticData(const MenuParserStaticData&) = delete;
  MenuParserStaticData(MenuParserStaticData&&) = delete;
  MenuParserStaticData& operator=(const MenuParserStaticData&) = delete;
  MenuParserStaticData& operator=(MenuParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag menuParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MenuParserStaticData> menuParserStaticData = nullptr;

void menuParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (menuParserStaticData != nullptr) {
    return;
  }
#else
  assert(menuParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MenuParserStaticData>(
    std::vector<std::string>{
      "menuFile", "menuFilePart", "functionDef", "loadMenu", "menuDef", 
      "menuItem", "itemItem", "propertyValue", "expression", "expressionPart", 
      "block", "elseifClause", "elseClause", "blockStatement", "blockToken"
    },
    std::vector<std::string>{
      "", "'{'", "'}'", "'('", "')'", "';'", "", "'functionDef'", "'loadMenu'", 
      "'menuDef'", "'itemDef'", "'execKey'", "'execKeyInt'", "'if'", "'elseif'", 
      "'else'", "'when'"
    },
    std::vector<std::string>{
      "", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "SEMICOLON", "OP", "FUNCTIONDEF", 
      "LOADMENU", "MENUDEF", "ITEMDEF", "EXECKEY", "EXECKEYINT", "IF", "ELSEIF", 
      "ELSE", "WHEN", "FLOAT", "INTEGER", "IDENTIFIER", "STRING", "WS", 
      "LINECOMMENT", "BLOCKCOMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  menuParserStaticData = std::move(staticData);
}

}

MenuParser::MenuParser(TokenStream *input) : MenuParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MenuParser::MenuParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MenuParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *menuParserStaticData->atn, menuParserStaticData->decisionToDFA, menuParserStaticData->sharedContextCache, options);
}

MenuParser::~MenuParser() {
  delete _interpreter;
}

const atn::ATN& MenuParser::getATN() const {
  return *menuParserStaticData->atn;
}

std::string MenuParser::getGrammarFileName() const {
  return "Menu.g4";
}

const std::vector<std::string>& MenuParser::getRuleNames() const {
  return menuParserStaticData->ruleNames;
}

const dfa::Vocabulary& MenuParser::getVocabulary() const {
  return menuParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MenuParser::getSerializedATN() const {
  return menuParserStaticData->serializedATN;
}


//----------------- MenuFileContext ------------------------------------------------------------------

MenuParser::MenuFileContext::MenuFileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MenuParser::MenuFileContext::EOF() {
  return getToken(MenuParser::EOF, 0);
}

std::vector<MenuParser::MenuFilePartContext *> MenuParser::MenuFileContext::menuFilePart() {
  return getRuleContexts<MenuParser::MenuFilePartContext>();
}

MenuParser::MenuFilePartContext* MenuParser::MenuFileContext::menuFilePart(size_t i) {
  return getRuleContext<MenuParser::MenuFilePartContext>(i);
}


size_t MenuParser::MenuFileContext::getRuleIndex() const {
  return MenuParser::RuleMenuFile;
}

void MenuParser::MenuFileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMenuFile(this);
}

void MenuParser::MenuFileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMenuFile(this);
}

MenuParser::MenuFileContext* MenuParser::menuFile() {
  MenuFileContext *_localctx = _tracker.createInstance<MenuFileContext>(_ctx, getState());
  enterRule(_localctx, 0, MenuParser::RuleMenuFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 898) != 0)) {
      setState(30);
      menuFilePart();
      setState(35);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(36);
    match(MenuParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MenuFilePartContext ------------------------------------------------------------------

MenuParser::MenuFilePartContext::MenuFilePartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MenuParser::MenuFilePartContext::getRuleIndex() const {
  return MenuParser::RuleMenuFilePart;
}

void MenuParser::MenuFilePartContext::copyFrom(MenuFilePartContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- WrapperMenuFilePartContext ------------------------------------------------------------------

tree::TerminalNode* MenuParser::WrapperMenuFilePartContext::LBRACE() {
  return getToken(MenuParser::LBRACE, 0);
}

tree::TerminalNode* MenuParser::WrapperMenuFilePartContext::RBRACE() {
  return getToken(MenuParser::RBRACE, 0);
}

std::vector<MenuParser::MenuFilePartContext *> MenuParser::WrapperMenuFilePartContext::menuFilePart() {
  return getRuleContexts<MenuParser::MenuFilePartContext>();
}

MenuParser::MenuFilePartContext* MenuParser::WrapperMenuFilePartContext::menuFilePart(size_t i) {
  return getRuleContext<MenuParser::MenuFilePartContext>(i);
}

MenuParser::WrapperMenuFilePartContext::WrapperMenuFilePartContext(MenuFilePartContext *ctx) { copyFrom(ctx); }

void MenuParser::WrapperMenuFilePartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWrapperMenuFilePart(this);
}
void MenuParser::WrapperMenuFilePartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWrapperMenuFilePart(this);
}
//----------------- FunctionDefMenuFilePartContext ------------------------------------------------------------------

MenuParser::FunctionDefContext* MenuParser::FunctionDefMenuFilePartContext::functionDef() {
  return getRuleContext<MenuParser::FunctionDefContext>(0);
}

MenuParser::FunctionDefMenuFilePartContext::FunctionDefMenuFilePartContext(MenuFilePartContext *ctx) { copyFrom(ctx); }

void MenuParser::FunctionDefMenuFilePartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDefMenuFilePart(this);
}
void MenuParser::FunctionDefMenuFilePartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDefMenuFilePart(this);
}
//----------------- MenuDefMenuFilePartContext ------------------------------------------------------------------

MenuParser::MenuDefContext* MenuParser::MenuDefMenuFilePartContext::menuDef() {
  return getRuleContext<MenuParser::MenuDefContext>(0);
}

MenuParser::MenuDefMenuFilePartContext::MenuDefMenuFilePartContext(MenuFilePartContext *ctx) { copyFrom(ctx); }

void MenuParser::MenuDefMenuFilePartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMenuDefMenuFilePart(this);
}
void MenuParser::MenuDefMenuFilePartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMenuDefMenuFilePart(this);
}
//----------------- LoadMenuMenuFilePartContext ------------------------------------------------------------------

MenuParser::LoadMenuContext* MenuParser::LoadMenuMenuFilePartContext::loadMenu() {
  return getRuleContext<MenuParser::LoadMenuContext>(0);
}

MenuParser::LoadMenuMenuFilePartContext::LoadMenuMenuFilePartContext(MenuFilePartContext *ctx) { copyFrom(ctx); }

void MenuParser::LoadMenuMenuFilePartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoadMenuMenuFilePart(this);
}
void MenuParser::LoadMenuMenuFilePartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLoadMenuMenuFilePart(this);
}
MenuParser::MenuFilePartContext* MenuParser::menuFilePart() {
  MenuFilePartContext *_localctx = _tracker.createInstance<MenuFilePartContext>(_ctx, getState());
  enterRule(_localctx, 2, MenuParser::RuleMenuFilePart);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(49);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MenuParser::LBRACE: {
        _localctx = _tracker.createInstance<MenuParser::WrapperMenuFilePartContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(38);
        match(MenuParser::LBRACE);
        setState(42);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 898) != 0)) {
          setState(39);
          menuFilePart();
          setState(44);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(45);
        match(MenuParser::RBRACE);
        break;
      }

      case MenuParser::FUNCTIONDEF: {
        _localctx = _tracker.createInstance<MenuParser::FunctionDefMenuFilePartContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(46);
        functionDef();
        break;
      }

      case MenuParser::MENUDEF: {
        _localctx = _tracker.createInstance<MenuParser::MenuDefMenuFilePartContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(47);
        menuDef();
        break;
      }

      case MenuParser::LOADMENU: {
        _localctx = _tracker.createInstance<MenuParser::LoadMenuMenuFilePartContext>(_localctx);
        enterOuterAlt(_localctx, 4);
        setState(48);
        loadMenu();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDefContext ------------------------------------------------------------------

MenuParser::FunctionDefContext::FunctionDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MenuParser::FunctionDefContext::FUNCTIONDEF() {
  return getToken(MenuParser::FUNCTIONDEF, 0);
}

tree::TerminalNode* MenuParser::FunctionDefContext::LBRACE() {
  return getToken(MenuParser::LBRACE, 0);
}

tree::TerminalNode* MenuParser::FunctionDefContext::RBRACE() {
  return getToken(MenuParser::RBRACE, 0);
}

std::vector<MenuParser::BlockContext *> MenuParser::FunctionDefContext::block() {
  return getRuleContexts<MenuParser::BlockContext>();
}

MenuParser::BlockContext* MenuParser::FunctionDefContext::block(size_t i) {
  return getRuleContext<MenuParser::BlockContext>(i);
}


size_t MenuParser::FunctionDefContext::getRuleIndex() const {
  return MenuParser::RuleFunctionDef;
}

void MenuParser::FunctionDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDef(this);
}

void MenuParser::FunctionDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDef(this);
}

MenuParser::FunctionDefContext* MenuParser::functionDef() {
  FunctionDefContext *_localctx = _tracker.createInstance<FunctionDefContext>(_ctx, getState());
  enterRule(_localctx, 4, MenuParser::RuleFunctionDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(51);
    match(MenuParser::FUNCTIONDEF);
    setState(52);
    match(MenuParser::LBRACE);
    setState(56);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1974280) != 0)) {
      setState(53);
      block();
      setState(58);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(59);
    match(MenuParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LoadMenuContext ------------------------------------------------------------------

MenuParser::LoadMenuContext::LoadMenuContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MenuParser::LoadMenuContext::LOADMENU() {
  return getToken(MenuParser::LOADMENU, 0);
}

tree::TerminalNode* MenuParser::LoadMenuContext::LBRACE() {
  return getToken(MenuParser::LBRACE, 0);
}

tree::TerminalNode* MenuParser::LoadMenuContext::STRING() {
  return getToken(MenuParser::STRING, 0);
}

tree::TerminalNode* MenuParser::LoadMenuContext::RBRACE() {
  return getToken(MenuParser::RBRACE, 0);
}


size_t MenuParser::LoadMenuContext::getRuleIndex() const {
  return MenuParser::RuleLoadMenu;
}

void MenuParser::LoadMenuContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoadMenu(this);
}

void MenuParser::LoadMenuContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLoadMenu(this);
}

MenuParser::LoadMenuContext* MenuParser::loadMenu() {
  LoadMenuContext *_localctx = _tracker.createInstance<LoadMenuContext>(_ctx, getState());
  enterRule(_localctx, 6, MenuParser::RuleLoadMenu);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    match(MenuParser::LOADMENU);
    setState(62);
    match(MenuParser::LBRACE);
    setState(63);
    match(MenuParser::STRING);
    setState(64);
    match(MenuParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MenuDefContext ------------------------------------------------------------------

MenuParser::MenuDefContext::MenuDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MenuParser::MenuDefContext::MENUDEF() {
  return getToken(MenuParser::MENUDEF, 0);
}

tree::TerminalNode* MenuParser::MenuDefContext::LBRACE() {
  return getToken(MenuParser::LBRACE, 0);
}

tree::TerminalNode* MenuParser::MenuDefContext::RBRACE() {
  return getToken(MenuParser::RBRACE, 0);
}

std::vector<MenuParser::MenuItemContext *> MenuParser::MenuDefContext::menuItem() {
  return getRuleContexts<MenuParser::MenuItemContext>();
}

MenuParser::MenuItemContext* MenuParser::MenuDefContext::menuItem(size_t i) {
  return getRuleContext<MenuParser::MenuItemContext>(i);
}


size_t MenuParser::MenuDefContext::getRuleIndex() const {
  return MenuParser::RuleMenuDef;
}

void MenuParser::MenuDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMenuDef(this);
}

void MenuParser::MenuDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMenuDef(this);
}

MenuParser::MenuDefContext* MenuParser::menuDef() {
  MenuDefContext *_localctx = _tracker.createInstance<MenuDefContext>(_ctx, getState());
  enterRule(_localctx, 8, MenuParser::RuleMenuDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(MenuParser::MENUDEF);
    setState(67);
    match(MenuParser::LBRACE);
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 531456) != 0)) {
      setState(68);
      menuItem();
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(74);
    match(MenuParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MenuItemContext ------------------------------------------------------------------

MenuParser::MenuItemContext::MenuItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MenuParser::MenuItemContext::getRuleIndex() const {
  return MenuParser::RuleMenuItem;
}

void MenuParser::MenuItemContext::copyFrom(MenuItemContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BlockMenuItemContext ------------------------------------------------------------------

tree::TerminalNode* MenuParser::BlockMenuItemContext::IDENTIFIER() {
  return getToken(MenuParser::IDENTIFIER, 0);
}

tree::TerminalNode* MenuParser::BlockMenuItemContext::LBRACE() {
  return getToken(MenuParser::LBRACE, 0);
}

tree::TerminalNode* MenuParser::BlockMenuItemContext::RBRACE() {
  return getToken(MenuParser::RBRACE, 0);
}

std::vector<MenuParser::BlockContext *> MenuParser::BlockMenuItemContext::block() {
  return getRuleContexts<MenuParser::BlockContext>();
}

MenuParser::BlockContext* MenuParser::BlockMenuItemContext::block(size_t i) {
  return getRuleContext<MenuParser::BlockContext>(i);
}

MenuParser::BlockMenuItemContext::BlockMenuItemContext(MenuItemContext *ctx) { copyFrom(ctx); }

void MenuParser::BlockMenuItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockMenuItem(this);
}
void MenuParser::BlockMenuItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockMenuItem(this);
}
//----------------- ExecKeyIntMenuItemContext ------------------------------------------------------------------

tree::TerminalNode* MenuParser::ExecKeyIntMenuItemContext::EXECKEYINT() {
  return getToken(MenuParser::EXECKEYINT, 0);
}

MenuParser::PropertyValueContext* MenuParser::ExecKeyIntMenuItemContext::propertyValue() {
  return getRuleContext<MenuParser::PropertyValueContext>(0);
}

tree::TerminalNode* MenuParser::ExecKeyIntMenuItemContext::LBRACE() {
  return getToken(MenuParser::LBRACE, 0);
}

tree::TerminalNode* MenuParser::ExecKeyIntMenuItemContext::RBRACE() {
  return getToken(MenuParser::RBRACE, 0);
}

std::vector<MenuParser::BlockContext *> MenuParser::ExecKeyIntMenuItemContext::block() {
  return getRuleContexts<MenuParser::BlockContext>();
}

MenuParser::BlockContext* MenuParser::ExecKeyIntMenuItemContext::block(size_t i) {
  return getRuleContext<MenuParser::BlockContext>(i);
}

MenuParser::ExecKeyIntMenuItemContext::ExecKeyIntMenuItemContext(MenuItemContext *ctx) { copyFrom(ctx); }

void MenuParser::ExecKeyIntMenuItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExecKeyIntMenuItem(this);
}
void MenuParser::ExecKeyIntMenuItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExecKeyIntMenuItem(this);
}
//----------------- ExecKeyMenuItemContext ------------------------------------------------------------------

tree::TerminalNode* MenuParser::ExecKeyMenuItemContext::EXECKEY() {
  return getToken(MenuParser::EXECKEY, 0);
}

MenuParser::PropertyValueContext* MenuParser::ExecKeyMenuItemContext::propertyValue() {
  return getRuleContext<MenuParser::PropertyValueContext>(0);
}

tree::TerminalNode* MenuParser::ExecKeyMenuItemContext::LBRACE() {
  return getToken(MenuParser::LBRACE, 0);
}

tree::TerminalNode* MenuParser::ExecKeyMenuItemContext::RBRACE() {
  return getToken(MenuParser::RBRACE, 0);
}

std::vector<MenuParser::BlockContext *> MenuParser::ExecKeyMenuItemContext::block() {
  return getRuleContexts<MenuParser::BlockContext>();
}

MenuParser::BlockContext* MenuParser::ExecKeyMenuItemContext::block(size_t i) {
  return getRuleContext<MenuParser::BlockContext>(i);
}

MenuParser::ExecKeyMenuItemContext::ExecKeyMenuItemContext(MenuItemContext *ctx) { copyFrom(ctx); }

void MenuParser::ExecKeyMenuItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExecKeyMenuItem(this);
}
void MenuParser::ExecKeyMenuItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExecKeyMenuItem(this);
}
//----------------- PropertyMenuItemContext ------------------------------------------------------------------

tree::TerminalNode* MenuParser::PropertyMenuItemContext::IDENTIFIER() {
  return getToken(MenuParser::IDENTIFIER, 0);
}

std::vector<MenuParser::PropertyValueContext *> MenuParser::PropertyMenuItemContext::propertyValue() {
  return getRuleContexts<MenuParser::PropertyValueContext>();
}

MenuParser::PropertyValueContext* MenuParser::PropertyMenuItemContext::propertyValue(size_t i) {
  return getRuleContext<MenuParser::PropertyValueContext>(i);
}

MenuParser::PropertyMenuItemContext::PropertyMenuItemContext(MenuItemContext *ctx) { copyFrom(ctx); }

void MenuParser::PropertyMenuItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPropertyMenuItem(this);
}
void MenuParser::PropertyMenuItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPropertyMenuItem(this);
}
//----------------- ItemDefMenuItemContext ------------------------------------------------------------------

tree::TerminalNode* MenuParser::ItemDefMenuItemContext::ITEMDEF() {
  return getToken(MenuParser::ITEMDEF, 0);
}

tree::TerminalNode* MenuParser::ItemDefMenuItemContext::LBRACE() {
  return getToken(MenuParser::LBRACE, 0);
}

tree::TerminalNode* MenuParser::ItemDefMenuItemContext::RBRACE() {
  return getToken(MenuParser::RBRACE, 0);
}

std::vector<MenuParser::ItemItemContext *> MenuParser::ItemDefMenuItemContext::itemItem() {
  return getRuleContexts<MenuParser::ItemItemContext>();
}

MenuParser::ItemItemContext* MenuParser::ItemDefMenuItemContext::itemItem(size_t i) {
  return getRuleContext<MenuParser::ItemItemContext>(i);
}

MenuParser::ItemDefMenuItemContext::ItemDefMenuItemContext(MenuItemContext *ctx) { copyFrom(ctx); }

void MenuParser::ItemDefMenuItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterItemDefMenuItem(this);
}
void MenuParser::ItemDefMenuItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MenuListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitItemDefMenuItem(this);
}
MenuParser::MenuItemContext* MenuParser::menuItem() {
  MenuItemContext *_localctx = _tracker.createInstance<MenuItemContext>(_ctx, getState());
  enterRule(_localctx, 10, MenuParser::RuleMenuItem);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(123);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<MenuParser::ItemDefMenuItemContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(76);
      match(MenuParser::ITEMDEF);
      setState(77);
      match(MenuParser::LBRACE);
      setState(81);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 530432) != 0)) {
        setState(78);
        itemItem();
        setState(83);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(84);
      match(MenuParser::RBRACE);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<MenuParser::ExecKeyMenuItemContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(85);
      match(MenuParser::EXECKEY);
      setState(86);
      propertyValue();
      setState(87);
      match(MenuParser::LBRACE);
      setState(91);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 1974280) != 0)) {
        setState(88);
        block();
        setState(93);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(94);
      match(MenuParser::RBRACE);
      break;
    }
